--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^3.2.13",
+    "feather-icons": "^4.29.0",
+    "vue": "^3.2.41",
+    "vue-feather": "^2.0.0",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
@@ -28,14 +30,17 @@
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
     "@vue/test-utils": "^2.0.0-0",
+    "autoprefixer": "^10.4.12",
     "chai": "^4.2.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
-    "less": "^4.0.0",
-    "less-loader": "^8.0.0",
+    "postcss": "^8.4.18",
     "prettier": "^2.4.1",
+    "sass": "^1.55.0",
+    "sass-loader": "^13.1.0",
+    "tailwindcss": "^3.1.8",
     "typescript": "~4.5.5"
   }
 }
